--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <!--Popup's-->
     <!--Import-->
 
-    <div id="importPopup" class="importPopup">
+    <div id="importPopup" class="popup">
         <div class="import__header">
           <div class="import__title">
             <p class="import__title__text">Импорт компании</p>
@@ -297,7 +297,7 @@
       
     <!--Export-->
 
-    <div id="exportPopup" class="exportPopup">
+    <div id="exportPopup" class="popup">
         <div class="export__header">
           <div class="export__title">
             <p class="export__title__text">Экспорт компании</p>
@@ -324,7 +324,7 @@
         </div>
         <span class="close-icon" onclick="cancelExport()"><img src="assets/img/Component 4.png" alt=""></span>
       </div>
-    
+      <div id="overlay" onclick="closePopup()"></div>
     <script src = "close.js"></script>
     <script src = "script.js"></script>
     <script src = "app.js"></script>
