Почти готовый popup

--- a/index.html
+++ b/index.html
@@ -336,39 +336,55 @@
         </div>
       </div>
       <div class="addPopup__body">
-        <div class="popup-content">
-          <span class="close-icon" onclick="cancelExport()"><img src="assets/img/Component 4.png" alt=""></span>
-          <div>
-              <label for="innkombanInput">ИНН компании:</label>
-              <input type="text" id="innkombanInput">
+        <span class="close-icon" onclick="cancelExport()"><img src="assets/img/Component 4.png" alt=""></span>
+        <div class="addPopup__popup-content">          
+          <div class = "addPopup__popup-content__input">
+              <label for="innkombanInput">ИНН</label>
+              <input class = "addPopup__input" type="text" id="innkombanInput">
           </div>
-          <div>
-              <label for="nazvkombanInput">Название компании:</label>
-              <input type="text" id="nazvkombanInput">
+          <div class = "addPopup__popup-content__input">
+              <label for="">Юредическая форма</label>
+              <input class = "addPopup__input" type="text" id="">
           </div>
-          <div>
-              <label for="telefInput">Телефон(ы):</label>
-              <input type="text" id="telefInput">
+          <div class = "addPopup__popup-content__input">
+              <label for="nazvkombanInput">Полное название</label>
+              <input class = "addPopup__input" type="text" id="nazvkombanInput">
           </div>
-          <div>
-              <label for="elpochtInput">Электронная почта:</label>
-              <input type="text" id="elpochtInput">
+          <div class = "addPopup__popup-content__input">
+              <label for="">Сокращеное название</label>
+              <input class = "addPopup__input" type="text" id="">
           </div>
-          <div>
-              <label for="schetnomerInput">Номер расчета:</label>
-              <input type="text" id="schetnomerInput">
+          <div class = "addPopup__popup-content__input">
+              <label for="telefInput">Телефон</label>
+              <input class = "addPopup__input" type="text" id="telefInput">
           </div>
-          <div>
-              <label for="schetdataInput">Дата расчета:</label>
-              <input type="text" id="schetdataInput">
+          <div class = "addPopup__popup-content__input">
+              <label for="emailInput">Email</label>
+              <input class = "addPopup__input" type="text" id="emailInput">
           </div>
-          <div>
-              <label for="vaknazvInput">Активные вакансии:</label>
-              <input type="text" id="vaknazvInput">
+          <div class = "addPopup__popup-content__input">
+              <label for="adressInput">Адрес</label>
+              <input class = "addPopup__input" type="text" id="adressInput">
           </div>
-          <div>
-              <label for="sourceFileInput">Источник объявления:</label>
-              <input type="text" id="sourceFileInput">
+          <div class = "addPopup__popup-content__input">
+              <label for="sourceFileInput">ОКВЕД 1</label>
+              <input class = "addPopup__input" type="text" id="sourceFileInput">
+          </div>
+          <div class = "addPopup__popup-content__input">
+              <label for="schetdataInput">ОКВЕД 2</label>
+              <input class = "addPopup__input" type="text" id="schetdataInput">
+          </div>
+          <div class = "addPopup__popup-content__input">
+              <label for="vaknazvInput">ОКВЕД 3</label>
+              <input class = "addPopup__input" type="text" id="vaknazvInput">
+          </div>
+          <div class = "addPopup__popup-content__input">
+              <label for="sourceFileInput">Статус / Дата ликвидации</label>
+              <input class = "addPopup__input" type="text" id="sourceFileInput">
+          </div>
+          <div class = "addPopup__popup-content__input">
+            <label for="sourceFileInput">Логотип</label>
+            <input class = "addPopup__input" type="text" id="sourceFileInput">
           </div>
         </div>
       </div> 
